[metadata]
description-file = README.md

[flake8]
per-file-ignores =
    **/__init__.py:F401
# exclude = no_track
# ignore W292 -- bug in autofix can clean this up, ignoring for now
# ignore W503 -- W503 is considered best practice W504 is the antipattern
ignore = E501,W292,W503

[tool:pytest]
log_cli=true

[coverage:run]
omit =
  */__init__.py

[coverage:report]
exclude_lines =
  pragma: no cover
  raise NotImplementedError
  if __name__ == .__main__.: